class Treatment {
  constructor(name, price, priceUnit) {
    this.name = name;
    this.price = price;
    this.priceUnit = priceUnit;
  }
}

module.exports = Treatment;
